@@ -6,8 +6,10 @@ $(function(){
     $("select#tx_egovapi_organization").html("");
     $("select#tx_egovapi_service").html("");
 
+    // Update the list of organizations
     $("select#tx_egovapi_community").change(function() {
         var language = $("select#tx_egovapi_language").val();
+
         $.getJSON(
             ajaxUrl,
             {
@@ -24,6 +26,33 @@ $(function(){
                         options += '<option value="' + data[i].id + '">' + data[i].name + '</option>';
                     }
                     $("select#tx_egovapi_organization").html(options);
+                }
+            }
+        )
+    });
+
+    // Update the list of services
+    $("select#tx_egovapi_organization").change(function() {
+        var language = $("select#tx_egovapi_language").val();
+        var community = $("select#tx_egovapi_community").val();
+
+        $.getJSON(
+            ajaxUrl,
+            {
+                eID: eID,
+                action: "services",
+                language: language,
+                community: community,
+                organization: $(this).val()
+            },
+            function(response) {
+                if (response.success) {
+                    var data = response.data;
+                    var options = '<option value=""></option>';
+                    for (var i = 0; i < data.length; i++) {
+                        options += '<option value="' + data[i].id + '-' + data[i].version + '">' + data[i].name + '</option>';
+                    }
+                    $("select#tx_egovapi_service").html(options);
                 }
             }
         )
